<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsersProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:ignore="UselessParent">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/image"
                        android:src="@mipmap/ic_launcher"
                        />

                    <TextView
                        android:id="@+id/appname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                      android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:layout_marginLeft="4dp"
                        />
                </LinearLayout>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profile"
            android:src="@drawable/facebook"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/name"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlineStatus"
            android:text="@string/online_status"
            android:layout_marginTop="6dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discription"
            android:text="@string/discription"
            android:layout_marginTop="6dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response"
                style="@style/Widget.MyApp.MyButton"
                />

            <Button
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/response"
                android:layout_toRightOf="@+id/response"
                android:text="@string/message"
                style="@style/Widget.MyApp.MyButton"
                />

            <Button
                android:id="@+id/Extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/message"
                android:layout_toRightOf="@+id/message"
                android:text="@string/extra"
                style="@style/Widget.MyApp.MyButton"
                />

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/posts"

            />



    </LinearLayout>

    </ScrollView>

</LinearLayout>